# ai-evaluator

./: .env.example  .gitignore  CLICKHOUSE_GRANTS.sql  CLICKHOUSE_INTEGRATION.md  DEPLOYMENT.md  Dockerfile  GRAFANA.md  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  buildspec.yaml  docker-compose.yml  log.txt  pyproject.toml  test_evaluation.py
schema/: README.md  clickhouse_schema.sql
src/ai_evaluator/: __init__.py  clickhouse_client.py  context_builder.py  evaluator.py  main.py  mcp_client.py  prompts.py
tests/: test_prompts.py
