[project]
name = "ai-evaluator"
version = "0.1.0"
description = "MNOC AI Evaluator - Post-resolution quality and automation assessment service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
    "strands-agents>=1.7.1",
    "strands-agents-tools>=0.2.6",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-redmine>=2.5.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
